syntax = "proto3";

package UserPackage;

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUseUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}
// Task message definition
message User {
    string userId = 1;
    string userName = 2;  
    string email = 3; 
    string password = 4;
    bool iAdmin= 5 ;
    string createdAt = 6;
    string updatedAt = 7;
}

// req && res for  CRUD opertaion

//create User 
message CreateUserRequest{
    string userName = 1;
    string email = 2;
    string password = 3;
}
message CreateUserResponse{
    User user =1;
}
// get User 
message GetUserRequest{
    string userId=1;
}
message GetUserResponse{
    User user =1;
}
// update User 
message UpdateUserRequest{
    string userId=1;
    string userName= 2;
}
message UpdateUSerResponse{
    User user =1;
}
// delete User 
message DeleteUserRequest{
    string useId=1;
}
message DeleteUserResponse{
    bool success = 1;
}

